--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
       <version>2.8.0</version>
       <scope>system</scope>
       <!-- Replace with the path to your Cytoscape installation here -->
-      <systemPath>/Applications/Cytoscape_v2.8.0/cytoscape.jar</systemPath>
+      <systemPath>${cytoscape.home}/cytoscape.jar</systemPath>
     </dependency>
   </dependencies>
   <build>
