--- a/pom.xml
+++ b/pom.xml
@@ -51,13 +51,26 @@
       </roles>
       <timezone>-8</timezone>
     </developer>
+    <developer>
+      <id>wwu</id>
+      <name>Ning Jiang</name>
+      <email>njiang@systemsbiology.org</email>
+      <url>http://gaggle.systemsbiology.org</url>
+      <organization>Institute for Systems Biology</organization>
+      <organizationUrl>http://www.systemsbiology.org</organizationUrl>
+      <roles>
+          <role>developer</role>
+      </roles>
+      <timezone>-8</timezone>
+    </developer>
   </developers>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-  <repositories>
+
+<!--  <repositories>
     <repository>
       <id>isb.gaggle.release</id>
       <url>http://como.systemsbiology.net/maven/repo-releases</url>
@@ -66,6 +79,7 @@
       </releases>
     </repository>
   </repositories>
+-->
 
   <dependencies>
     <dependency>
@@ -83,13 +97,13 @@
     <dependency>
       <groupId>org.systemsbiology.gaggle</groupId>
       <artifactId>gaggle-core</artifactId>
-      <version>1.0</version>
+      <version>2.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.systemsbiology.gaggle</groupId>
       <artifactId>gaggle-connector</artifactId>
-      <version>1.0</version>
+      <version>2.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -98,7 +112,7 @@
       <version>2.8.0</version>
       <scope>system</scope>
       <!-- Replace with the path to your Cytoscape installation here -->
-      <systemPath>/home/weiju/Cytoscape_v2.8.3/cytoscape.jar</systemPath>
+      <systemPath>C:/Program Files/Cytoscape_v2.8.3/cytoscape.jar</systemPath>
     </dependency>
   </dependencies>
   <build>
